--- a/views/events/newEvent.ejs
+++ b/views/events/newEvent.ejs
@@ -9,6 +9,7 @@
             <option value="Meet and Chill">Meet and Chill</option>
             <option value="Painting Session">Painting Session</option>
             <option value="Other">Other</option>
+            <option value="Warhammer 30K">Warhammer 30K</option>
         </select>
         
         <!-- Title input form -->
@@ -21,7 +22,7 @@
         
         <!-- Event details form -->
         <label for="event-details">Details</label>
-        <textarea id="event-details" name="details" placeholder="Enter your event details here!" required></textarea>
+        <textarea id="event-details" name="details" placeholder="Enter your event details here!" minlength="10" required></textarea>
         
         <!-- Location input form -->
         <label for="location">Location</label>
